== 0.9.3
  * Support mongoid ~> 2.0, mongo_mapper ~> 0.9
  
== 0.9.2
  * Replace votee_type to votee_class
  * Bug fixes
  
== 0.9.1
  * Update gem description
  
== 0.9.0
  * Add MongoMapper support
  * Simplify voting algorithm
  * vote / revote / unvote always return voteable object (votee)
  * Tasks module bug fixes
  
== 0.8.1
  * Fix gem release bug
  
== 0.8.0
  * Rename to voteable_mongo to support other MongoDB Object-Document Mappers like MongoMapper
  * Minor fixes and refactoring
  
== 0.7.4
  * Add Votee#up_voters(VoterClass), Votee#down_voters(VoterClass), Votee#voters(VoterClass)
  * Add Voter scopes: Voter.up_voted_for(votee), Voter.down_voted_for(votee), Voter.voted_for(votee)
  * Add voteable ..., :index => true options
  * Optimization on unvote and revote validations
  * Fix for :up & :down points are nil in rake tasks
  
== 0.7.3
  * Add :return_votee => true option to vote function to warranty always return voteable object
  * Add Votee.voted?, Votee.up_voted?, Votee.down_voted?
  * Update parent for ManyToMany relationship
  * Refactor
  
== 0.7.2
  * Use Collection#find_and_modify to retrieve updated votes data and parent_ids (don't need an extra query to get parent_ids)

== 0.7.1
  * Add votee#voted_by?(voter or voter_id)
  * Better doc
  * Refactor & cleanup source code

== 0.7.0
  * Use readable field names (up, down, up_count, down_count, count, point) instead of very short field names (u, d, uc, dc, c, p)

== 0.6.4
  * Drop Voter#votees, Voter#up_votees, Voter#down_votees in favor of Votee#voted_by(voter), Votee#up_voted_by(voter), Votee#down_voted_by(voter) scopes

== 0.6.3
  * Add rake db:mongoid:voteable:migrate_old_votes to migrate vote data created by version < 0.6.0 to new vote data storage

== 0.6.2
  * Fix bug: use before_create instead of after_after_initialize

== 0.6.1
  * Set counters and point to 0 for uninitialized voteable objects in order sort and query

== 0.6.0